# memgraph

./: .gitmodules  CMakeLists.txt  README
example/: main.cpp
include/memgraph/: Graph.h
src/: Graph.cpp  Graph.h  main.cpp
